# c2pa-min

./: .gitignore  Cargo.toml  README.md  cargo.toml  deny.toml
.github/workflows/: ci.yml
src/: callback_signer.rs  main.rs
src/fixtures/: manifest.json
