[package]
name = "c2pa_min"
version = "0.1.0"
edition = "2021"
default-run = "c2pa_min"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
c2pa = {version = "0.37.1", features = ["unstable_api"]}
ed25519-dalek = {  version = "2.0" , features = ["pem"]}
pem = "3.0.4"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[[bin]]
name = "signer"
