[package]
name = "caipi"
version = "0.1.0"
edition = "2021"
default-run = "caipi"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
c2pa = {version = "0.38.0", features = ["unstable_api"]}
clap = { version = "4.5.4", features = ["derive", "env"] }
ed25519-dalek = {  version = "2.0" , features = ["pem"]}
pem = "3.0.4"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[[bin]]
name = "signer"
